# NSISSQLite3

./: CMakeLists.txt  LICENSE  README.md  nsissqliteplugin.c
nsis/: pluginapi-x86-ansi.lib  pluginapi-x86-unicode.lib
